
Emulator:
- SDL GUI:
  - Update clock speed in the status bar when changing bus speed
    in Falcon mode
  - In the floppy dialog, use a checkbox to enable/disable drives A and B
    and another checkbox to choose single/double sided drive
  - In the screen dialog, add checkbox for --desktop-st option
  - Add a 2nd line in the status bar, with infos on FDC, joysticks, monitor
- New command line options:
  - Options --drive-a and --drive-b to enable/disable drives A and B
  - Options --drive-a-heads and --drive-b-heads to select single or
    double sided drives A and B
  - --slowdown option to increase (multiply) VBL wait times
- New Native Features commands:
  - NF_DEBUGGER invokes Hatari debugger from native program
  - NF_FASTFORWARD toggles fast forward on/off
- Tracing improvements:
  - Fix: Xbios(255) modified the given argument string
  - Allow BIOS, XBIOS, GEMDOS, VDI and AES tracing to be enabled without
    enabling also X/BIOS interception, GEMDOS HD emulation or extended
    VDI mode
  - Show PC value for traced Bios/XBios/GemDOS calls
- Debugger:
  - Fix: release mouse in all cases where debugger can be invoked
  - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly
  - Fix: "symbols" command crash when it was used during TOS bootup
  - Fix: TOS and cartridge addresses weren't (with all TOS versions)
    in address order which asserted in profile data post-processor
  - Fix: "next" command didn't work correctly in "hex" number base
  - Fix: DATA/BSS debug symbol offsets were interpreted based on
    (incorrect) VBCC's vlink behavior
  - New "ym" info subcommand to show YM register values
  - removed limits on breakpoints and their conditions
  - when entering debugger, current program's DRI/GST format debug
    symbols are automatically read from it, if such are available
  - new --debug-except option to specify which exceptions invoke
    the debugger, and WinUAE CPU core support for -D toggle option